# rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: jekyll-gh-pages.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  init-db.sql  main.py  pyproject.toml  requirements.txt  run.bat  run.py  setup-env.bat  setup-env.sh  setup_env.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: datasource.py  documents.py  health.py  query.py  structured_extraction.py
backend/app/core/: config.py
backend/app/models/: document.py
backend/app/schemas/: schemas.py
backend/app/services/: chunking_service.py  document_processor.py  file_watcher.py  object_storage.py  structured_extraction.py  vector_store.py
backend/app/services/connectors/: database_connector.py  web_connector.py
backend/app/services/embeddings/: __init__.py
backend/app/services/parsers/: base.py  document_parser.py  docx_parser.py  factor.py  factory.py  image_parser.py  pdf_parser.py  structured_parser.py  text+parser.py  text_parser.py  web_parser.py
backend/app/services/retrieval/: __init__.py  generator.py  retriever.py
backend/app/static/: index.html  simple_websocket.html
docs/: _config.yml  api-reference.md  architecture.md  chunking-strategies.md  getting-started.md  index.md  installation.md  rag-explained.md  troubleshooting.md  user-guide.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/datasources/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/websocket/: page.tsx
frontend/src/components/: page.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  MetricsPanel.tsx
frontend/src/components/Documents/: DocumentList.tsx  DocumentUpload.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/components/Modal/: Modal.tsx
frontend/src/components/Modals/: HealthCheckModal.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts  websocket.ts
storage/minio/: .gitkeep
(+9 files in other folders)
